--- a/src/main/resources/assets/css/variable.css
+++ b/src/main/resources/assets/css/variable.css
@@ -4,7 +4,8 @@
     -fx-primary-color: #EE6983;
     -fx-secondary-color: #FFC4C4;
     -fx-accent-color: #74071B;
-    -fx-container-bg: #FFF5E4;
+    -fx-container-bg: derive(-fx-bg-color, 10%);
+    -fx-container-border-color: #F5E9D6;
     -fx-button-text-color: #FFC4C4;
     -fx-soft-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 8, 0.2, 0, 2);
     -fx-strong-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.6), 16, 0.3, 0, 4);
