--- a/src/main/resources/views/Main.fxml
+++ b/src/main/resources/views/Main.fxml
@@ -15,7 +15,7 @@
     <children>
         <BorderPane fx:id="mainBorderPane">
             <top>
-                <HBox fx:id="topBar" styleClass="topbar" spacing="30.0" BorderPane.alignment="CENTER">
+                <HBox fx:id="topBar" alignment="TOP_CENTER" spacing="30.0" styleClass="topbar" BorderPane.alignment="CENTER">
                     <children>
                         <HBox>
                             <children>
@@ -51,6 +51,12 @@
                             </padding>
                         </HBox>
                     </children>
+               <BorderPane.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </BorderPane.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
                 </HBox>
             </top>
             <center>
