--- a/src/main/resources/views/admin/MemberView.fxml
+++ b/src/main/resources/views/admin/MemberView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.MemberViewController">
    <children>
       <VBox alignment="CENTER" layoutY="86.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -16,7 +16,7 @@
                   <TextField fx:id="txtSearch" promptText="Search" />
                </children>
             </HBox>
-            <TableView>
+            <TableView fx:id="memberTableView">
               <columns>
                 <TableColumn fx:id="colName" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="Name" />
                 <TableColumn fx:id="colPhoneNumber" maxWidth="-1.0" minWidth="200.0" prefWidth="-1.0" text="Phone Number" />
