--- a/src/main/resources/views/SettingBox.fxml
+++ b/src/main/resources/views/SettingBox.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.SettingBoxController">
+<VBox fx:id="settingVBox" styleClass="container" spacing="20.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.SettingBoxController">
    <children>
       <Hyperlink fx:id="userConfigurationLink" text="User Configuration" />
       <Hyperlink fx:id="paymentConfigurationLink" text="Payment Configuration" />
    </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </VBox>
