--- a/src/main/resources/assets/css/base.css
+++ b/src/main/resources/assets/css/base.css
@@ -2,7 +2,7 @@
    Root / Global Defaults
    ========================= */
 .root {
-  -fx-font-family: ".SF NS Text", "Helvetica Neue", "Segoe UI", "Ubuntu", "Noto Sans", Arial, sans-serif;
+  -fx-font-family: "Segoe UI", "Ubuntu", Arial, sans-serif;
   -fx-font-size: 16;
   -fx-font-weight: normal;
   -fx-background-color: -fx-bg-color;
