--- a/src/main/resources/views/Main.fxml
+++ b/src/main/resources/views/Main.fxml
@@ -10,60 +10,83 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import com.cakeshopsystem.utils.components.BreadcrumbBar ?>
 
-<StackPane fx:id="mainStackPane" minHeight="500.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.MainController">
+<StackPane fx:id="mainStackPane" minHeight="500.0" xmlns="http://javafx.com/javafx/25"
+           xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.MainController">
     <children>
         <BorderPane fx:id="mainBorderPane">
+            <!-- TOP BAR -->
             <top>
-                <HBox fx:id="topBar" alignment="TOP_CENTER" spacing="30.0" styleClass="topbar" BorderPane.alignment="CENTER">
+                <HBox fx:id="topBar" alignment="TOP_CENTER" spacing="30.0" styleClass="topbar"
+                      BorderPane.alignment="CENTER">
                     <children>
                         <HBox>
                             <children>
-                                <ImageView fx:id="profileImageView" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fx:id="profileImageView" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true"
+                                           preserveRatio="true"/>
                                 <VBox alignment="CENTER_LEFT" spacing="20.0">
                                     <children>
-                                        <Label fx:id="usernameLabel" text="Username" />
-                                        <Label fx:id="roleLabel" text="Role" />
+                                        <Label fx:id="usernameLabel" text="Username"/>
+                                        <Label fx:id="roleLabel" text="Role"/>
                                     </children>
                                 </VBox>
                             </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="38.0" prefWidth="481.0" spacing="20.0" HBox.hgrow="ALWAYS">
                             <children>
-                                <Hyperlink fx:id="adminDashboardLink" minWidth="-Infinity" text="Dashboard" />
-                                <Hyperlink fx:id="staffDashboardLink" layoutX="10.0" layoutY="33.0" minWidth="-Infinity" text="Dashboard" />
-                                <Hyperlink fx:id="userLink" minWidth="-Infinity" text="User" />
-                                <Hyperlink fx:id="adminProductLink" minWidth="-Infinity" text="Product" />
-                                <Hyperlink fx:id="memberLink" minWidth="-Infinity" text="Member" />
-                                <Hyperlink fx:id="staffProductLink" minWidth="-Infinity" text="Product" />
-                                <Hyperlink fx:id="customerOrderLink" minWidth="-Infinity" text="Customer Order" />
-                                <Hyperlink fx:id="bookingLink" minWidth="-Infinity" text="Booking" />
+                                <Hyperlink fx:id="adminDashboardLink" minWidth="-Infinity" text="Dashboard"/>
+                                <Hyperlink fx:id="staffDashboardLink" minWidth="-Infinity" text="Dashboard"/>
+                                <Hyperlink fx:id="userLink" minWidth="-Infinity" text="User"/>
+                                <Hyperlink fx:id="adminProductLink" minWidth="-Infinity" text="Product"/>
+                                <Hyperlink fx:id="memberLink" minWidth="-Infinity" text="Member"/>
+                                <Hyperlink fx:id="staffProductLink" minWidth="-Infinity" text="Product"/>
+                                <Hyperlink fx:id="customerOrderLink" minWidth="-Infinity" text="Customer Order"/>
+                                <Hyperlink fx:id="bookingLink" minWidth="-Infinity" text="Booking"/>
                             </children>
                         </HBox>
                         <HBox alignment="CENTER" spacing="20.0">
                             <children>
-                        <FontIcon fx:id="moonIcon" iconLiteral="fas-moon" iconSize="20" />
-                                <FontIcon fx:id="settingIcon" iconLiteral="fas-sliders-h" iconSize="20" />
-                        <FontIcon fx:id="signoutIcon" iconLiteral="fas-sign-out-alt" iconSize="20" />
+                                <FontIcon fx:id="moonIcon" iconLiteral="fas-moon" iconSize="20"
+                                          styleClass="icon-clickable"/>
+                                <FontIcon fx:id="settingIcon" iconLiteral="fas-sliders-h" iconSize="20"
+                                          styleClass="icon-clickable"/>
+                                <FontIcon fx:id="signoutIcon" iconLiteral="fas-sign-out-alt" iconSize="20"
+                                          styleClass="icon-clickable"/>
                             </children>
                             <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                             </padding>
                         </HBox>
                     </children>
-               <BorderPane.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </BorderPane.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
+                    <BorderPane.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                    </BorderPane.margin>
+                    <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </padding>
                 </HBox>
             </top>
+            <!-- CENTER CONTENT -->
             <center>
-                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="750.0" BorderPane.alignment="CENTER">
-                    <AnchorPane fx:id="contentPane" layoutX="14.0" layoutY="62.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
+                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="750.0"
+                            BorderPane.alignment="CENTER">
+                    <AnchorPane fx:id="contentPane" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0"
+                                AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0"/>
+                    <!-- Breadcrumb Bar -->
+                    <BreadcrumbBar styleClass="breadcrumb-container" fx:id="breadcrumbBar" prefHeight="30.0" AnchorPane.bottomAnchor="0.0"
+                                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
                 </AnchorPane>
             </center>
         </BorderPane>
+        <AnchorPane fx:id="overlayPane" onMouseClicked="#handleOverlayClick"
+                    style="-fx-background-color: rgba(0,0,0,0.4);"
+                    visible="false">
+            <AnchorPane fx:id="popupPane" prefWidth="300"
+                        style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0, 0, 0);"
+                        styleClass="container"
+                        AnchorPane.bottomAnchor="100.0" AnchorPane.rightAnchor="300.0" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="100.0">
+            </AnchorPane>
+        </AnchorPane>
     </children>
 </StackPane>
