--- a/src/main/resources/views/admin/UserView.fxml
+++ b/src/main/resources/views/admin/UserView.fxml
@@ -10,34 +10,40 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.UserViewController">
+<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.cakeshopsystem.controllers.admin.UserViewController">
     <children>
-        <VBox alignment="CENTER" layoutX="10.0" layoutY="8.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <!-- anchor 30 30 50 30 -->
+        <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="50.0"
+              AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
             <children>
                 <HBox alignment="TOP_RIGHT">
                     <children>
-                        <TextField fx:id="txtSearch" promptText="Search" styleClass="text-field" />
+                        <TextField fx:id="txtSearch" promptText="Search" styleClass="text-field"/>
                         <ComboBox fx:id="btnFilter" promptText="Filter">
                             <HBox.margin>
-                                <Insets left="25.0" />
+                                <Insets left="25.0"/>
                             </HBox.margin>
                         </ComboBox>
                         <Button fx:id="btnAdd" mnemonicParsing="false" text="Add">
                             <HBox.margin>
-                                <Insets left="25.0" />
+                                <Insets left="25.0"/>
                             </HBox.margin>
                         </Button>
                     </children>
                     <VBox.margin>
-                        <Insets />
+                        <Insets/>
                     </VBox.margin>
                 </HBox>
                 <TableView fx:id="userTableView" VBox.vgrow="ALWAYS">
                     <columns>
-                        <TableColumn fx:id="colName" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Name" />
-                        <TableColumn fx:id="colEmail" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Email" />
-                        <TableColumn fx:id="colStatus" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Status" />
+                        <TableColumn fx:id="colName" minWidth="200.0" text="Name"/>
+                        <TableColumn fx:id="colEmail" minWidth="200.0" text="Email"/>
+                        <TableColumn fx:id="colStatus" minWidth="200.0" text="Status"/>
                     </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
                 </TableView>
             </children>
         </VBox>
