--- a/src/main/resources/views/admin/AddUser.fxml
+++ b/src/main/resources/views/admin/AddUser.fxml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-
 
 <AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.AddUserController">
    <children>
-      <VBox alignment="CENTER" layoutX="143.0" layoutY="52.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER" spacing="10.0">
          <children>
-            <Label text="Add User" />
+            <Label styleClass="title" text="Add User" />
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label prefHeight="18.0" prefWidth="224.0" text="User Name:" />
+                  <Label prefHeight="18.0" prefWidth="232.0" text="Password:" GridPane.rowIndex="1" />
+                  <Label prefHeight="18.0" prefWidth="230.0" text="Comfirm Password:" GridPane.rowIndex="2" />
+                  <TextField fx:id="userNameTextField" prefHeight="21.0" prefWidth="290.0" promptText="Enter Name..." GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin></TextField>
+                  <PasswordField fx:id="passwordTextField" promptText="Enter Password..." GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <opaqueInsets>
+                        <Insets top="20.0" />
+                     </opaqueInsets></PasswordField>
+                  <PasswordField fx:id="conPasswordTextField" promptText="Comfirm Password..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <ComboBox fx:id="comboRole" prefHeight="26.0" prefWidth="313.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label prefHeight="18.0" prefWidth="227.0" text="Role:" GridPane.rowIndex="3" />
+               </children>
+            </GridPane>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
